--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
         <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-streaming_2.12</artifactId>
-            <version>3.0.0</version>
+            <artifactId>spark-streaming_2.11</artifactId>
+            <version>2.1.1</version>
 
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.scala-lang/scala-library -->
@@ -21,18 +21,32 @@
             <artifactId>scala-library</artifactId>
             <version>2.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-hive_2.11</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.12</artifactId>
-            <version>3.0.0</version>
+            <artifactId>spark-core_2.11</artifactId>
+            <version>2.1.1</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.12</artifactId>
-            <version>3.0.0</version>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>2.1.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.27</version>
+        </dependency>
+
 
     </dependencies>
 
